# brest-game

./: README.md
game_client/: .gitignore  Cargo.toml
game_client/crates/anima/: Cargo.toml
game_client/crates/anima/src/: durations.rs  enable_anima.rs  lib.rs  ted.rs  ted_seal.rs  trs.rs
game_client/crates/entity_event/src/: lib.rs
game_client/crates/mock_server/: Cargo.toml
game_client/crates/mock_server/src/: constants.rs  lib.rs  plugin.rs  resources.rs  systems.rs
game_client/crates/shared/: Cargo.toml
game_client/crates/shared/src/: components.rs  events.rs  lib.rs
game_client/framework/anima/src/: animate_anima.rs  enable_anima.rs  meta.rs  plugins.rs  trs_seal.rs
game_client/framework/entity_event/: Cargo.toml
game_client/framework/entity_event/src/: lib.rs
game_client/framework/states_timer/: Cargo.toml
game_client/framework/states_timer/src/: resources.rs  systems.rs
game_client/src/: app.rs  card.rs  constants.rs  main.rs
game_client/src/battle/: mod.rs  plugin.rs  private.rs  resources.rs  states.rs  systems.rs
game_client/src/battle_round/: mod.rs  plugin.rs  resources.rs  systems.rs
game_client/src/board_locations/: mod.rs
game_client/src/card/: bundles.rs  card.rs  commands.rs  components.rs  constants.rs  events.rs  fixtures.rs  mod.rs  plugins.rs  resources.rs  states.rs  systems.rs
game_client/src/card/commands/: mod.rs  (+1 more)
game_client/src/card_color/: plugin.rs
game_client/src/card_location/: components.rs  events.rs  mod.rs  plugin.rs  systems.rs
game_client/src/card_material/: mod.rs  plugin.rs  private.rs  resources.rs  systems.rs
game_client/src/card_mesh/: mod.rs  plugin.rs  resources.rs
game_client/src/glue/: events.rs  mod.rs  plugin.rs  resources.rs  states.rs
game_client/src/round/: plugin.rs  private.rs  resources.rs  states.rs  systems.rs
game_client/src/scene/: constants.rs  mod.rs  plugins.rs  systems.rs
game_client/src/sequences/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
game_client/src/setup/: commands.rs  mod.rs  plugin.rs  private.rs  resources.rs
game_client/src/turn/: plugin.rs  private.rs  resources.rs  states.rs  systems.rs
(+94 files in other folders)
