[package]
name = "game_client"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
