[workspace]
resolver = "2"
members = ["crates/*", "framework/*"]

[workspace.dependencies]
bevy = { version = "0.15.3", features = ["bevy_dev_tools"] }
shared = { path = "./crates/shared" }

[package]
name = "game_client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
shared = { workspace = true }

anima = { path = "./framework/anima" }
entity_event = { path = "./framework/entity_event" }
states_timer = { path = "./framework/states_timer" }

mock_server = { path = "./crates/mock_server" }

bevy_dylib = "0.15.3"
bevy-inspector-egui = "0.30.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
